--- a/src/test/resources/properties/OR.properties
+++ b/src/test/resources/properties/OR.properties
@@ -2,3 +2,7 @@ url=http://www.way2automation.com/angularjs-protractor/banking/#/login
 implicitwait=10
 bml=/html/body/div[3]/div/div[2]/div/div[1]/div[2]/button
 addCustomer=/html/body/div[3]/div/div[2]/div/div[1]/button[1]
+firstname=/html/body/div[3]/div/div[2]/div/div[2]/div/div/form/div[1]/input
+lastname=/html/body/div[3]/div/div[2]/div/div[2]/div/div/form/div[2]/input
+postcode=/html/body/div[3]/div/div[2]/div/div[2]/div/div/form/div[3]/input
+addCustomerBtn=/html/body/div[3]/div/div[2]/div/div[2]/div/div/form/button
